--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.18.0
   flutter_svg: ^2.0.4
   flutter_gen: ^5.2.0
+  syncfusion_flutter_charts: ^21.1.38
+
 
 dev_dependencies:
   flutter_test:
